# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  configuration.yaml  spec.yaml
.devcontainer/: devcontainer.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
