[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["shinemost"]

[dev-dependencies]
reqwest = "0.12.8"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros","rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "runtime-actix-rustls",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
