[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["shinemost"]

[dev-dependencies]
reqwest = "0.12.8"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros","rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
uuid = {version = "1",features = ["v4"]}
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18",features = ["registry","env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.20.2"
secrecy = { version = "0.10.3",features = ["serde"]}

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "runtime-actix-rustls",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
